--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
-</head>
-<body>
-    <h1>Welcome to My GitHub Pages Site</h1>
-    <p>This is my first GitHub Pages deployment!</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css">
+    <title>Dashboard</title>
+  </head>
+  <body>
+    <div class = "container">
+      <!-- サイドバー -->
+      <aside>
+        <div class = "side-header">
+          <a href="#" data-tab = "home" class = "home">
+            <span class = "ri-home-line" class = "icon"></span>
+            <span>Home</span>
+          </a>
+        </div>
+      </aside>
+
+      <!-- メインコンテンツ -->
+      <main>
+        <section id = "home">
+          <div class = "main-header">
+            <div class = "profile">
+              <span class = "ri-user-smile-line"></span>
+            </div>
+            <div class = "main-title">Welcome to Your Personal Dashboard</div>
+            <div class = "main-sub-title">Make your daily life more convenient and enjoyable</div>
+          </div>
+
+          <div class = "message">
+            <p>This dashboard is a tool to enrich your daily life. You can easily use essential features such as diary entries, memo management, and checking weather information.</p>
+            <p>Small daily records become irreplaceable memories, and efficient task management leads to fulfilling days. Please use this as a partner that supports your everyday life.</p>
+          </div>
+        </section>
+      </main>
+
+    </div>
+  </body>
 </html>
